// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render with maximum props 1`] = `
<div
  className="alertWrapper alert-amber root size48"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    >
      <div
        className="actionWrapper"
      >
        <button
          className="container uui-button-box uui-enabled -clickable root size-30 uui-no-left-icon uui-no-right-icon link-button-primary actionLink"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            ACTION 1
          </div>
        </button>
      </div>
    </div>
    <button
      className="container uui-button-box uui-enabled -clickable icon-button-default root closeIcon"
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Alert should render with minimum props 1`] = `
<div
  className="alertWrapper alert-blue root size48"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`ErrorAlert should be rendered correctly 1`] = `
<div
  className="alertWrapper alert-red root size48"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`HintAlert should be rendered correctly 1`] = `
<div
  className="alertWrapper alert-blue root size48"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`SuccessAlert should be rendered correctly 1`] = `
<div
  className="alertWrapper alert-green root size48"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`WarningAlert should be rendered correctly 1`] = `
<div
  className="alertWrapper alert-amber root size48"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
  </div>
</div>
`;
